# rust-template

./: Cargo.toml  Makefile  README.md  build.rs  go.mod
src/: main.rs
src/api/: censor.rs  mod.rs
src/common/: profanity.rs
src/model/: mod.rs  response.rs  sensor.rs
src/proto/: mod.rs  profanity.pb.go  profanity.proto  profanity.rs  profanity_grpc.rs
