[package]
name = "rusttemplate"
version = "0.1.0"
authors = ["khangle"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
censor = "0.1.1"
rocket = "0.4.5"
rocket_codegen = "0.4.5"
serde = "1.0.115"
serde_json = "1.0.57"
serde_derive = "1.0.115"
protobuf = "~2"
futures = "~0.3"
grpc = "~0.8"
grpc-protobuf = "0.8.1"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]

[build-dependencies]
protoc-rust-grpc = "~0.8"
